# agentic-edge-stack

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
bonus/k8s/: 00-namespace.yaml  05-qdrant-pvc.yaml  10-qdrant-deployment.yaml  20-qdrant-service.yaml  README.md  rag_qdrant.py
bonus/quantization/: profile.py  report.md
bonus/quantization/raw_outputs/: llama3.2_3b-instruct-q3_K_M.txt  llama3.2_3b-instruct-q4_K_M.txt
data/corpus/: 01-what-is-an-ai-agent.md  02-agent-loop-and-reasoning.md  03-tool-calling.md  04-rag-memory-multi-agent.md
scripts/: deploy.sh  verify.py
src/: agent.py  api.py  config.py  llm.py  rag.py  schemas.py  tools.py
src/web/: index.html
tests/: conftest.py  stream_smoke.py  test_agent.py  test_agent_routing.py  test_api.py  test_rag.py  test_schemas.py  test_tools.py
