[project]
name = "agentic-edge-stack"
version = "0.1.0"
description = "Locally hosted agentic AI assistant: local LLM + in-memory RAG tool + tool-calling agent + streaming FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
